fix broken layouts on view transitions

--- a/src/app.component.css
+++ b/src/app.component.css
@@ -1,4 +1,3 @@
 .app {
     position: relative;
-    overflow: hidden;
 }
