--- a/src/styles.css
+++ b/src/styles.css
@@ -164,7 +164,7 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
+    width: 100%;
 }
 .fade-enter {
     opacity: 0;
