--- a/src/views/home/home.component.css
+++ b/src/views/home/home.component.css
@@ -1,3 +1,10 @@
+.home {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .home__header h1 {
     margin: 0;
     text-align: center;
