--- a/src/views/projects/projects.component.css
+++ b/src/views/projects/projects.component.css
@@ -1,5 +1,5 @@
 .projects {
-    margin-top: 45px;
+    padding-top: 45px;
 }
 .project-item {
     margin-bottom: 24px;
