--- a/src/views/resume/resume.component.css
+++ b/src/views/resume/resume.component.css
@@ -1,5 +1,5 @@
 .resume {
-    margin-top: 45px;
+    padding-top: 45px;
     font-size: 14px;
     line-height: 1.5;
     color: #3a3a3a;
