--- a/src/views/work/work.component.css
+++ b/src/views/work/work.component.css
@@ -1,5 +1,5 @@
 .work {
-    margin-top: 45px;
+    padding-top: 45px;
 }
 .work__splash {
     margin: 16px auto;
